[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "my_mobile_api"
authors = [
    {name = "David", email = "dukesdavidwork@gmail.com"},
]
description = "Mobile API for Safi Pro"
requires-python = ">=3.10"
dynamic = ["version"]

[tool.flit.module]
name = "my_mobile_api"
